# Mc-Pixie-Launcher-5

./: .gitignore  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
.run/: Run Dev Server.run.xml  Run Tauri App.run.xml
src/: app.config.ts  app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: downloads.rs  lib.rs  main.rs  project_install.rs
src-tauri/src/structs/: minecraft.rs  mod.rs  paths.rs  project_types.rs
src/components/: card.vue  titlebar.vue
src/css/: main.css
src/layouts/: default.vue
src/pages/: browse-[id].vue  browse.vue  index.vue  minecraft.vue  settings.vue
src/utils/: transitionConfig.ts  types.ts
