[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
reqwest = "0.12.12"
serde_json = "1.0"
directories = "5.0"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2"
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2.0.0", features = ["deep-link"] }
discord-rich-presence = "0.2.5"
uuid = "1.13.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"


